[gd_scene load_steps=52 format=3 uid="uid://i2xcw82s5paj"]

[ext_resource type="Script" path="res://ships/heavy_A/heavy_a.gd" id="1_lro4a"]
[ext_resource type="Gradient" uid="uid://dxbpa3wy4kkya" path="res://art/player_boost_gradient.tres" id="3_6y6sg"]
[ext_resource type="Script" path="res://ships/basic_ship/fire.gd" id="4_qyuif"]
[ext_resource type="Script" path="res://ships/basic_ship/boost.gd" id="5_yg480"]
[ext_resource type="Script" path="res://ships/basic_ship/enemy_fire.gd" id="6_qy03o"]
[ext_resource type="Script" path="res://ships/basic_ship/enemy_boost.gd" id="7_eh0hy"]
[ext_resource type="Shader" path="res://ships/basic_ship/damage.gdshader" id="8_lhmcb"]
[ext_resource type="Texture2D" uid="uid://dxx33fetgybyg" path="res://art/Heavy.png" id="8_uojxa"]
[ext_resource type="PackedScene" uid="uid://do4o0k42eixaw" path="res://ships/ship_state_machine/ship_state_machine.tscn" id="9_7ggaa"]
[ext_resource type="Script" path="res://ships/generic_states/boid_state.gd" id="10_p6fbi"]
[ext_resource type="Script" path="res://ships/generic_states/follow_mouse.gd" id="11_wgxc7"]
[ext_resource type="Script" path="res://ships/generic_states/circle.gd" id="12_p1i7p"]
[ext_resource type="Script" path="res://ships/generic_states/defend.gd" id="13_04bbe"]
[ext_resource type="Script" path="res://ships/generic_states/shoot.gd" id="14_bk0a1"]
[ext_resource type="PackedScene" uid="uid://b16d8fcohve56" path="res://ships/ship_area/ship_area.tscn" id="15_mcwel"]
[ext_resource type="Script" path="res://ships/basic_ship/smg.gd" id="16_q7gj5"]
[ext_resource type="PackedScene" uid="uid://jnajxsxwxoer" path="res://ships/basic_ship/projectile/smg_bullet.tscn" id="17_wi7e5"]
[ext_resource type="Script" path="res://ships/basic_ship/ship_weight_debugger.gd" id="18_jw3el"]

[sub_resource type="Curve" id="Curve_xjb1h"]
_data = [Vector2(0, 0.615385), 0.0, 0.0, 0, 0, Vector2(0.846667, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_gkwdo"]
curve = SubResource("Curve_xjb1h")

[sub_resource type="GradientTexture1D" id="GradientTexture1D_isw5s"]
resource_local_to_scene = true
gradient = ExtResource("3_6y6sg")

[sub_resource type="Curve" id="Curve_7blia"]
max_value = 12.0
_data = [Vector2(0, 12), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_0papf"]
curve = SubResource("Curve_7blia")

[sub_resource type="Curve" id="Curve_i7yo7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jvgtt"]
curve = SubResource("Curve_i7yo7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wjaof"]
resource_local_to_scene = true
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 84.51
initial_velocity_max = 192.04
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_isw5s")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_c4a68"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7728x"]
resource_local_to_scene = true
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 84.51
initial_velocity_max = 98.59
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_isw5s")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_akv2g"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hth4b"]
resource_local_to_scene = true
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 145.16
initial_velocity_max = 145.16
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_isw5s")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kotcs"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="Gradient" id="Gradient_phvpi"]
colors = PackedColorArray(0.0470588, 0.901961, 0.94902, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wemo8"]
gradient = SubResource("Gradient_phvpi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_645os"]
resource_local_to_scene = true
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 84.51
initial_velocity_max = 98.59
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_wemo8")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_c75ca"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="Gradient" id="Gradient_5uipf"]
colors = PackedColorArray(0.0470588, 0.901961, 0.94902, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8v2pm"]
gradient = SubResource("Gradient_5uipf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_80dav"]
resource_local_to_scene = true
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 84.51
initial_velocity_max = 98.59
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_8v2pm")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_u3dir"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="Gradient" id="Gradient_wujah"]
colors = PackedColorArray(0.0470588, 0.901961, 0.94902, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ghfwd"]
gradient = SubResource("Gradient_wujah")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rhjb0"]
resource_local_to_scene = true
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 145.16
initial_velocity_max = 145.16
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_ghfwd")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_v8vlh"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_67vke"]
resource_local_to_scene = true
shader = ExtResource("8_lhmcb")
shader_parameter/color_a = Color(0.439216, 0.054902, 0.196078, 1)
shader_parameter/color_b = Color(0.4, 0.0588235, 0.192157, 1)
shader_parameter/colors_affect_alpha = true
shader_parameter/flash_amount = 1.0
shader_parameter/flash_speed = 0.0
shader_parameter/transparency = 0.0
shader_parameter/intensity = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a51ba"]
radius = 80.7872
height = 257.912

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35usg"]
size = Vector2(280.981, 38.0169)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2b4da"]
size = Vector2(24, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o54dc"]
size = Vector2(113, 27)

[sub_resource type="Animation" id="Animation_esfsr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ship_sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ship_sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("damage_shader:material:shader_parameter/transparency")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_eh7qf"]
resource_name = "dmg"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ship_sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("damage_shader:material:shader_parameter/transparency")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.33]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rwwpy"]
_data = {
"RESET": SubResource("Animation_esfsr"),
"dmg": SubResource("Animation_eh7qf")
}

[node name="heavy_A" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_lro4a")
inertia = 15.0
max_health = 1500
starting_health = 1200
thrust_accel = 300.0
max_speed = 100.0
boost_max_speed = 300.0
rotation_speed = 50.0

[node name="boosts" type="Node2D" parent="."]

[node name="player_fire1" type="GPUParticles2D" parent="boosts"]
position = Vector2(-106, -84)
amount = 100
process_material = SubResource("ParticleProcessMaterial_wjaof")
texture = SubResource("CompressedTexture2D_c4a68")
lifetime = 0.5
local_coords = true
script = ExtResource("4_qyuif")

[node name="player_fire2" type="GPUParticles2D" parent="boosts"]
position = Vector2(-131, -52)
amount = 50
process_material = SubResource("ParticleProcessMaterial_7728x")
texture = SubResource("CompressedTexture2D_akv2g")
lifetime = 0.5
local_coords = true
script = ExtResource("4_qyuif")

[node name="player_fire3" type="GPUParticles2D" parent="boosts"]
position = Vector2(-149, -24)
amount = 50
process_material = SubResource("ParticleProcessMaterial_wjaof")
texture = SubResource("CompressedTexture2D_c4a68")
lifetime = 0.5
local_coords = true
script = ExtResource("4_qyuif")

[node name="player_fire4" type="GPUParticles2D" parent="boosts"]
position = Vector2(-168, 1)
amount = 50
process_material = SubResource("ParticleProcessMaterial_wjaof")
texture = SubResource("CompressedTexture2D_c4a68")
lifetime = 0.5
local_coords = true
script = ExtResource("4_qyuif")

[node name="player_fire5" type="GPUParticles2D" parent="boosts"]
position = Vector2(-150, 23)
amount = 50
process_material = SubResource("ParticleProcessMaterial_wjaof")
texture = SubResource("CompressedTexture2D_c4a68")
lifetime = 0.5
local_coords = true
script = ExtResource("4_qyuif")

[node name="player_fire6" type="GPUParticles2D" parent="boosts"]
position = Vector2(-131, 51)
amount = 50
process_material = SubResource("ParticleProcessMaterial_wjaof")
texture = SubResource("CompressedTexture2D_c4a68")
lifetime = 0.5
local_coords = true
script = ExtResource("4_qyuif")

[node name="player_fire7" type="GPUParticles2D" parent="boosts"]
position = Vector2(-104, 84)
amount = 50
process_material = SubResource("ParticleProcessMaterial_wjaof")
texture = SubResource("CompressedTexture2D_c4a68")
lifetime = 0.5
local_coords = true
script = ExtResource("4_qyuif")

[node name="player_boost" type="GPUParticles2D" parent="boosts"]
position = Vector2(-57, -130)
amount = 100
process_material = SubResource("ParticleProcessMaterial_hth4b")
texture = SubResource("CompressedTexture2D_kotcs")
lifetime = 0.5
local_coords = true
script = ExtResource("5_yg480")

[node name="player_boost2" type="GPUParticles2D" parent="boosts"]
position = Vector2(-57, 130)
amount = 100
process_material = SubResource("ParticleProcessMaterial_hth4b")
texture = SubResource("CompressedTexture2D_kotcs")
lifetime = 0.5
local_coords = true
script = ExtResource("5_yg480")

[node name="enemy_fire1" type="GPUParticles2D" parent="boosts"]
position = Vector2(-105, -84)
amount = 50
process_material = SubResource("ParticleProcessMaterial_645os")
texture = SubResource("CompressedTexture2D_c75ca")
lifetime = 0.5
local_coords = true
script = ExtResource("6_qy03o")

[node name="enemy_fire2" type="GPUParticles2D" parent="boosts"]
position = Vector2(-134, -52)
amount = 50
process_material = SubResource("ParticleProcessMaterial_80dav")
texture = SubResource("CompressedTexture2D_u3dir")
lifetime = 0.5
local_coords = true
script = ExtResource("6_qy03o")

[node name="enemy_fire3" type="GPUParticles2D" parent="boosts"]
position = Vector2(-150, -23)
amount = 50
process_material = SubResource("ParticleProcessMaterial_80dav")
texture = SubResource("CompressedTexture2D_u3dir")
lifetime = 0.5
local_coords = true
script = ExtResource("6_qy03o")

[node name="enemy_fire4" type="GPUParticles2D" parent="boosts"]
position = Vector2(-168, 1)
amount = 50
process_material = SubResource("ParticleProcessMaterial_80dav")
texture = SubResource("CompressedTexture2D_u3dir")
lifetime = 0.5
local_coords = true
script = ExtResource("6_qy03o")

[node name="enemy_fire5" type="GPUParticles2D" parent="boosts"]
position = Vector2(-150, 23)
amount = 50
process_material = SubResource("ParticleProcessMaterial_80dav")
texture = SubResource("CompressedTexture2D_u3dir")
lifetime = 0.5
local_coords = true
script = ExtResource("6_qy03o")

[node name="enemy_fire6" type="GPUParticles2D" parent="boosts"]
position = Vector2(-132, 51)
amount = 50
process_material = SubResource("ParticleProcessMaterial_80dav")
texture = SubResource("CompressedTexture2D_u3dir")
lifetime = 0.5
local_coords = true
script = ExtResource("6_qy03o")

[node name="enemy_fire7" type="GPUParticles2D" parent="boosts"]
position = Vector2(-104, 85)
amount = 50
process_material = SubResource("ParticleProcessMaterial_80dav")
texture = SubResource("CompressedTexture2D_u3dir")
lifetime = 0.5
local_coords = true
script = ExtResource("6_qy03o")

[node name="enemy_boost" type="GPUParticles2D" parent="boosts"]
position = Vector2(-58, -130)
amount = 100
process_material = SubResource("ParticleProcessMaterial_rhjb0")
texture = SubResource("CompressedTexture2D_v8vlh")
lifetime = 0.5
local_coords = true
script = ExtResource("7_eh0hy")

[node name="enemy_boost2" type="GPUParticles2D" parent="boosts"]
position = Vector2(-61, 130)
amount = 100
process_material = SubResource("ParticleProcessMaterial_rhjb0")
texture = SubResource("CompressedTexture2D_v8vlh")
lifetime = 0.5
local_coords = true
script = ExtResource("7_eh0hy")

[node name="ship_sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(11, 0)
rotation = 1.5708
scale = Vector2(1.65, 1.65)
texture = ExtResource("8_uojxa")
hframes = 4

[node name="damage_shader" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_67vke")
position = Vector2(11, 0)
rotation = 1.5708
scale = Vector2(1.65, 1.65)
texture = ExtResource("8_uojxa")
hframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1.14441e-05, 0)
rotation = 1.57509
shape = SubResource("CapsuleShape2D_a51ba")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-28.0021, 0.495692)
rotation = 1.57509
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_35usg")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(139, 3.35477e-06)
rotation = -3.14159
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_2b4da")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-18.5, -76.5)
rotation = -3.14159
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_o54dc")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-19, 74)
rotation = -3.14159
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_o54dc")

[node name="ShipStateMachine" parent="." instance=ExtResource("9_7ggaa")]

[node name="BoidState" type="Node" parent="ShipStateMachine"]
script = ExtResource("10_p6fbi")

[node name="FollowMouse" type="Node" parent="ShipStateMachine"]
script = ExtResource("11_wgxc7")
id = "follow_mouse"

[node name="Circle" type="Node" parent="ShipStateMachine"]
script = ExtResource("12_p1i7p")
id = "circle"

[node name="Defend" type="Node" parent="ShipStateMachine"]
script = ExtResource("13_04bbe")
id = "defend"
first_active_state = true

[node name="Shoot" type="Node" parent="ShipStateMachine"]
script = ExtResource("14_bk0a1")
id = "shoot"

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="gun1" type="Node2D" parent="." node_paths=PackedStringArray("fire_position_node")]
position = Vector2(99, -41)
script = ExtResource("16_q7gj5")
projectile_scene = ExtResource("17_wi7e5")
fire_position_node = NodePath(".")

[node name="gun2" type="Node2D" parent="." node_paths=PackedStringArray("fire_position_node")]
position = Vector2(100, 41)
script = ExtResource("16_q7gj5")
projectile_scene = ExtResource("17_wi7e5")
fire_position_node = NodePath(".")

[node name="ShipWeightDebugger" type="Node2D" parent="."]
visible = false
script = ExtResource("18_jw3el")
highest_color = Color(0, 0, 0.686275, 1)
scale_factor = 50.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rwwpy")
}

[node name="ShipArea" parent="." instance=ExtResource("15_mcwel")]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
